syntax = "proto3";
package irismod.token;

import "cosmos/base/v1beta1/coin.proto";
import "cosmos_proto/cosmos.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "google/protobuf/any.proto";
import "irismod/token/v1beta1/token.proto";

option go_package = "mods.irisnet.org/modules/token/types/v1beta1";

// Query creates service with token as RPC
service Query {
  // Token returns token with token name
  rpc Token(QueryTokenRequest) returns (QueryTokenResponse) {
    option (google.api.http).get = "/irismod/token/tokens/{denom}";
  }
  // Tokens returns the token list
  rpc Tokens(QueryTokensRequest) returns (QueryTokensResponse) {
    option (google.api.http).get = "/irismod/token/tokens";
  }
  // Fees returns the fees to issue or mint a token
  rpc Fees(QueryFeesRequest) returns (QueryFeesResponse) {
    option (google.api.http).get = "/irismod/token/tokens/{symbol}/fees";
  }
  // Params queries the token parameters
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/irismod/token/params";
  }
  // TotalBurn queries all the burnt coins
  rpc TotalBurn(QueryTotalBurnRequest) returns (QueryTotalBurnResponse) {
    option (google.api.http).get = "/irismod/token/total_burn";
  }
}

// QueryTokenRequest is request type for the Query/Token RPC method
message QueryTokenRequest { string denom = 1; }

// QueryTokenResponse is response type for the Query/Token RPC method
message QueryTokenResponse {
  google.protobuf.Any token = 1
      [ (cosmos_proto.accepts_interface) = "ContentI" ];
}

// QueryTokensRequest is request type for the Query/Tokens RPC method
message QueryTokensRequest {
  string owner = 1;
  // pagination defines an optional pagination for the request.
  cosmos.base.query.v1beta1.PageRequest pagination = 2;
}

// QueryTokensResponse is response type for the Query/Tokens RPC method
message QueryTokensResponse {
  repeated google.protobuf.Any tokens = 1
      [ (cosmos_proto.accepts_interface) = "ContentI" ];

  cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

// QueryFeesRequest is request type for the Query/Fees RPC method
message QueryFeesRequest { string symbol = 1; }

// QueryFeesResponse is response type for the Query/Fees RPC method
message QueryFeesResponse {
  bool exist = 1;
  cosmos.base.v1beta1.Coin issue_fee = 2 [
    (gogoproto.nullable) = false,
    (gogoproto.casttype) = "github.com/cosmos/cosmos-sdk/types.Coin"
  ];
  cosmos.base.v1beta1.Coin mint_fee = 3 [
    (gogoproto.nullable) = false,
    (gogoproto.casttype) = "github.com/cosmos/cosmos-sdk/types.Coin"
  ];
}

// QueryParametersRequest is request type for the Query/Parameters RPC method
message QueryParamsRequest {}

// QueryParametersResponse is response type for the Query/Parameters RPC method
message QueryParamsResponse {
  token.Params params = 1 [ (gogoproto.nullable) = false ];

  cosmos.base.query.v1beta1.PageResponse res = 2;
}

// QueryTokenRequest is request type for the Query/TotalBurn RPC method
message QueryTotalBurnRequest {}

// QueryTotalBurnResponse is response type for the Query/TotalBurn RPC method
message QueryTotalBurnResponse {
  repeated cosmos.base.v1beta1.Coin burned_coins = 1
      [ (gogoproto.nullable) = false ];
}